--- a/cpanel.html
+++ b/cpanel.html
@@ -16,8 +16,13 @@
     .progress-bar { font-size: 0; transition: width 0.8s ease; }
     td { vertical-align: middle; }
     table { table-layout: auto; width: 100%; }
-
+.swal2-popup {
+    overflow: hidden !important;
+  }
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
+
 </head>
 <body>
 
@@ -58,7 +63,7 @@
   </div>
 
   <div class="card mb-4">
-    <div class="card-header bg-primary text-white"><i class="fa-solid fa-chart-bar"></i> Perbandingan</div>
+    <div class="card-header bg-success text-white"><i class="fa-solid fa-chart-bar"></i> Perbandingan</div>
     <div class="card-body">
       <div class="mb-2"><small>Pemasukan</small></div>
       <div class="progress mb-3"><div id="progressPemasukan" class="progress-bar bg-success" style="width: 0%;"></div></div>
@@ -105,17 +110,11 @@
 
 </div>
   
-
-  
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-  
  
     <div id="timeline" class="d-flex gap-3 overflow-auto pb-2"></div>
 
-
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- Firebase & FontAwesome sudah ada -->
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
@@ -135,6 +134,7 @@
 
   const timelineDiv = document.getElementById("timeline");
 
+  // ✅ Fungsi loadTimeline
   async function loadTimeline() {
     const snapshot = await getDocs(collection(db, "pelanggan"));
     const items = [];
@@ -142,128 +142,196 @@
       const d = doc.data();
       items.push({
         nama: d.nama,
-        nominal: d.nominal,
-        tglPasang: d.tglPemasangan // format: dd-mm-yyyy
+        paket: d.paket || '-',
+        alamat: d.alamat || '-',
+        kodePelanggan: d.kodePelanggan || '0000',
+        nominal: d.nominal || 0,
+        tglPasang: d.tglPemasangan
       });
     });
 
+    // Urutkan berdasarkan tanggal pasang (tanggal saja)
     items.sort((a, b) => {
-      const [ddA, mmA, yyyyA] = a.tglPasang.split('-').map(Number);
-      const [ddB, mmB, yyyyB] = b.tglPasang.split('-').map(Number);
+      const [ddA] = a.tglPasang.split('-').map(Number);
+      const [ddB] = b.tglPasang.split('-').map(Number);
       return ddA - ddB;
     });
 
     const today = new Date();
     let html = '';
 
+    // 👉 LOOP SETIAP ITEM ➜ HITUNG JATUH TEMPO & RENDER CARD
     items.forEach(item => {
-  const [yyyy, mm, dd] = item.tglPasang.split('-').map(Number);
+      const [yyyy, mm, dd] = item.tglPasang.split('-').map(Number);
 
-  // Tanggal pasang ➜ update ke bulan sekarang
-  let jatuhTempo = new Date(today.getFullYear(), today.getMonth(), dd);
+      // Buat tanggal jatuh tempo di bulan ini
+      let jatuhTempo = new Date(today.getFullYear(), today.getMonth(), dd);
 
-  // Kalau sudah lewat, bulan depan
-  if (today.getDate() > dd) {
-    jatuhTempo.setMonth(jatuhTempo.getMonth() + 1);
-  }
+      // Jika tanggal sudah lewat, mundurkan ke bulan depan
+      if (today.getDate() > dd) {
+        jatuhTempo.setMonth(jatuhTempo.getMonth() + 1);
+      }
 
-  const diffTime = jatuhTempo - today;
-  const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
-  const isToday = diffDays === 0;
-  const isWarning = diffDays <= 7 && diffDays >= 0;
+      const diffTime = jatuhTempo - today;
+      const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+      const isToday = diffDays === 0;
+      const isWarning = diffDays <= 7 && diffDays >= 0;
 
-  const cardClass = isWarning ? 'bg-danger text-white' : 'bg-light';
+      const cardClass = isWarning ? 'bg-danger text-white' : 'bg-light';
 
-  html += `
-    <div class="card ${cardClass} shadow-sm flex-shrink-0" style="min-width: 220px;">
-      <div class="card-body">
-        <h6 class="card-title mb-1">
-          <i class="fas fa-user"></i> ${item.nama}
-        </h6>
-        <p class="card-text mb-1">
-          <i class="fas fa-money-bill"></i> Rp ${Number(item.nominal).toLocaleString()}
-        </p>
-        <small class="text-muted ${isWarning ? 'text-white' : ''}">
-          <i class="fas fa-calendar"></i> ${jatuhTempo.toLocaleDateString('id-ID')}
-          ${isToday ? '<span class="badge bg-dark ms-1">Hari Ini</span>' : ''}
-        </small>
-      </div>
-    </div>
-  `;
-});
+      html += `
+        <div class="card ${cardClass} shadow-sm flex-shrink-0" style="min-width: 220px; cursor: pointer;"
+          onclick="generateInvoice(
+            '${item.nama.replace(/'/g, "\\'")}',
+            '${item.paket.replace(/'/g, "\\'")}',
+            '${item.alamat.replace(/'/g, "\\'")}',
+            '${item.kodePelanggan}',
+            ${item.nominal},
+            '${item.tglPasang}'
+          )">
+          <div class="card-body">
+            <h6 class="card-title mb-1">
+              <i class="fas fa-user"></i> ${item.nama}
+            </h6>
+            <p class="card-text mb-1">
+              <i class="fas fa-money-bill"></i> Rp ${Number(item.nominal).toLocaleString()}
+            </p>
+            <small class="${isWarning ? 'text-white' : 'text-muted'}">
+              <i class="fas fa-calendar"></i> ${jatuhTempo.toLocaleDateString('id-ID')}
+              ${isToday ? '<span class="badge bg-dark ms-1">Hari Ini</span>' : ''}
+            </small>
+          </div>
+        </div>
+      `;
+    });
 
     timelineDiv.innerHTML = html || '<p class="text-muted">Tidak ada jadwal.</p>';
   }
 
   loadTimeline();
-</script>
 
+  // ✅ Fungsi generateInvoice
+  window.generateInvoice = async function (nama, paket, alamat, kodePelanggan, nominal, tglPemasangan) {
+    const { jsPDF } = window.jspdf;
 
-   <script type="module">
-    const API_KEY = "1c02b03323602402ca922b951c366cc9";
-    const LAT = -6.3521;
-    const LON = 107.0577;
+    const periodeNow = new Date();
+    const periodeStr = periodeNow.toLocaleString('id-ID', { month: 'long', year: 'numeric' });
 
-    const weatherDiv = document.getElementById("weather");
+    const [dd, mm, yyyy] = tglPemasangan.split('-').map(Number);
+    const pemasanganDate = new Date(yyyy, mm - 1, dd);
 
-    async function fetchWeather() {
-      try {
-        const response = await fetch(
-          `https://api.openweathermap.org/data/2.5/weather?lat=${LAT}&lon=${LON}&units=metric&lang=id&appid=${API_KEY}`
-        );
-        if (!response.ok) throw new Error("API error");
-        const data = await response.json();
-        renderWeather(data);
-      } catch (error) {
-        console.error(error);
-        weatherDiv.innerHTML = `<p class="text-danger">Gagal mengambil data cuaca.</p>`;
-      }
+    const pemasanganMonthYear = `${String(pemasanganDate.getMonth() + 1).padStart(2, '0')}${pemasanganDate.getFullYear()}`;
+    const invoiceMonthYear = `${String(periodeNow.getMonth() + 1).padStart(2, '0')}${periodeNow.getFullYear()}`;
+
+    const noInvoice = `INV-${kodePelanggan}${invoiceMonthYear}`;
+
+    await Swal.fire({
+      title: '<div style="font-size: .9rem;">Memproses Invoice...</div>',
+      html: `<div style="overflow: hidden; min-height: 50px; display: flex; align-items: center; justify-content: center;">
+        <div class="spinner-border text-primary" role="status"></div>
+      </div>`,
+      timer: 1000,
+      allowOutsideClick: false,
+      showConfirmButton: false,
+      scrollbarPadding: false
+    });
+
+    const doc = new jsPDF();
+    doc.setFillColor(0, 51, 153);
+    doc.rect(0, 0, 210, 20, 'F');
+    doc.setFontSize(16);
+    doc.setTextColor(255, 255, 255);
+    doc.text("GENZET HOME", 14, 12);
+    doc.setFontSize(10);
+    doc.text(`NO: ${noInvoice}`, 160, 12);
+
+    doc.setTextColor(0, 0, 0);
+    doc.setFontSize(12);
+    doc.text("Bill To:", 14, 35);
+    doc.text(nama, 14, 42);
+    const alamatSplit = doc.splitTextToSize(alamat, 80);
+    doc.text(alamatSplit, 14, 49);
+
+    doc.text("From:", 130, 35);
+    doc.text("GENZET HOME", 130, 42);
+    doc.text("Jl. Bambu Apus, Jakarta Timur", 130, 49);
+
+    const bodyRows = [
+      [`Internet Paket ${paket}`, '1', periodeStr, `Rp ${Number(nominal).toLocaleString("id-ID")}`, `Rp ${Number(nominal).toLocaleString("id-ID")}`]
+    ];
+
+    if (pemasanganMonthYear === invoiceMonthYear) {
+      bodyRows.push(['Jasa Instalasi', '1', periodeStr, `Rp ${Number(50000).toLocaleString("id-ID")}`, `Rp ${Number(50000).toLocaleString("id-ID")}`]);
     }
 
-    function renderWeather(data) {
-  const temp = data.main.temp;
-  const condition = data.weather[0].description;
-  const humidity = data.main.humidity;
-  const wind = data.wind.speed;
+    const totalTagihan = bodyRows.reduce((sum, row) => sum + parseInt(row[4].replace(/[^\d]/g, ''), 10), 0);
+    bodyRows.push([{ content: 'TOTAL', colSpan: 4, styles: { halign: 'right', fontStyle: 'bold' } }, `Rp ${Number(totalTagihan).toLocaleString("id-ID")}`]);
 
-  weatherDiv.innerHTML = `
-  <tr>
-      <td class="text-success align-middle"><i class="fas fa-temperature-high"></i></td>
-      <td class="align-middle text-nowrap"><strong>Suhu</strong></td>
-      <td class="align-middle text-end px-1">:</td>
-      <td class="align-middle">${temp}°C</td>
-    </tr>
-    <tr>
-      <td class="text-success align-middle"><i class="fas fa-cloud"></i></td>
-      <td class="align-middle text-nowrap"><strong>Kondisi</strong></td>
-      <td class="align-middle text-end px-1">:</td>
-      <td class="align-middle">${condition}</td>
-    </tr>
-    <tr>
-      <td class="text-success align-middle"><i class="fas fa-tint"></i></td>
-      <td class="align-middle text-nowrap"><strong>Kelembapan</strong></td>
-      <td class="align-middle text-end px-1">:</td>
-      <td class="align-middle">${humidity}%</td>
-    </tr>
-    <tr>
-      <td class="text-success align-middle"><i class="fas fa-wind"></i></td>
-      <td class="align-middle text-nowrap"><strong>Angin</strong></td>
-      <td class="align-middle text-end px-1">:</td>
-      <td class="align-middle">${wind} m/s</td>
-    </tr>
-   
-`;
-}
+    doc.autoTable({
+      startY: 75,
+      head: [['Description', 'Qty', 'Periode', 'Price', 'Total']],
+      body: bodyRows,
+      styles: { fontSize: 12, cellPadding: 6 },
+      headStyles: { fillColor: [0, 51, 153] },
+      margin: { left: 15, right: 15 }
+    });
 
+    const tanggalStr = `${String(periodeNow.getDate()).padStart(2, '0')}-${String(periodeNow.getMonth() + 1).padStart(2, '0')}-${periodeNow.getFullYear()}`;
+    doc.setFontSize(10);
+    doc.text(`Tanggal: ${tanggalStr}`, 130, doc.lastAutoTable.finalY + 10);
 
+    doc.text("Payment Information:", 14, doc.lastAutoTable.finalY + 10);
+    doc.text("Bank: BANK BCA", 14, doc.lastAutoTable.finalY + 17);
+    doc.text("No. Rek: 1234567890", 14, doc.lastAutoTable.finalY + 24);
+    doc.text("Email: support@genzet.com", 14, doc.lastAutoTable.finalY + 31);
 
+    const pdfBlob = doc.output('blob');
+    const pdfUrl = URL.createObjectURL(pdfBlob);
+    window.open(pdfUrl, '_blank');
+  };
+</script>
 
+<script type="module">
+  const API_KEY = "1c02b03323602402ca922b951c366cc9";
+  const LAT = -6.3521;
+  const LON = 107.0577;
 
+  const weatherDiv = document.getElementById("weather");
 
+  // ✅ Fungsi fetchWeather
+  async function fetchWeather() {
+    try {
+      const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?lat=${LAT}&lon=${LON}&units=metric&lang=id&appid=${API_KEY}`);
+      if (!response.ok) throw new Error("API error");
+      const data = await response.json();
+      renderWeather(data);
+    } catch (error) {
+      console.error(error);
+      weatherDiv.innerHTML = `<p class="text-danger">Gagal mengambil data cuaca.</p>`;
+    }
+  }
 
-    fetchWeather();
-    setInterval(fetchWeather, 5 * 60 * 1000);
-  </script>
+  // ✅ Fungsi renderWeather
+  function renderWeather(data) {
+    const temp = data.main.temp;
+    const condition = data.weather[0].description;
+    const humidity = data.main.humidity;
+    const wind = data.wind.speed;
+
+    weatherDiv.innerHTML = `
+      <tr><td class="text-success align-middle"><i class="fas fa-temperature-high"></i></td>
+      <td class="align-middle text-nowrap"><strong>Suhu</strong></td><td class="align-middle text-end px-1">:</td><td class="align-middle">${temp}°C</td></tr>
+      <tr><td class="text-success align-middle"><i class="fas fa-cloud"></i></td>
+      <td class="align-middle text-nowrap"><strong>Kondisi</strong></td><td class="align-middle text-end px-1">:</td><td class="align-middle">${condition}</td></tr>
+      <tr><td class="text-success align-middle"><i class="fas fa-tint"></i></td>
+      <td class="align-middle text-nowrap"><strong>Kelembapan</strong></td><td class="align-middle text-end px-1">:</td><td class="align-middle">${humidity}%</td></tr>
+      <tr><td class="text-success align-middle"><i class="fas fa-wind"></i></td>
+      <td class="align-middle text-nowrap"><strong>Angin</strong></td><td class="align-middle text-end px-1">:</td><td class="align-middle">${wind} m/s</td></tr>`;
+  }
+
+  fetchWeather();
+  setInterval(fetchWeather, 5 * 60 * 1000);
+</script>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
@@ -285,11 +353,13 @@
 
   let totalPemasukan = 0, totalPengeluaran = 0, totalAssets = 0, saldo = 0;
 
+  // ✅ Fungsi auth state observer
   onAuthStateChanged(auth, (user) => {
     if (!user) window.location.href = "login.html";
     else refreshLaporan();
   });
 
+  // ✅ Fungsi refreshLaporan
   async function refreshLaporan() {
     totalPemasukan = totalPengeluaran = totalAssets = saldo = 0;
 
@@ -312,6 +382,7 @@
     tampilkanProgress(totalPemasukan, totalPengeluaran, totalAssets, saldo);
   }
 
+  // ✅ Fungsi tampilkanProgress
   function tampilkanProgress(pemasukan, pengeluaran, assets, saldo) {
     const total = pemasukan + pengeluaran + assets + Math.abs(saldo);
     const persenPemasukan = pemasukan > 0 ? Math.round((pemasukan / total) * 100) : 0;
@@ -332,6 +403,7 @@
     }, 100);
   }
 
+  // ✅ Fungsi animateNumber
   function animateNumber(elementId, targetValue) {
     const el = document.getElementById(elementId);
     let start = 0;
@@ -345,11 +417,13 @@
       el.textContent = "Rp " + value.toLocaleString();
       if (progress < 1) requestAnimationFrame(updateNumber);
     }
+
     requestAnimationFrame(updateNumber);
   }
 
   document.getElementById("refreshBtn").addEventListener("click", refreshLaporan);
 
+  // ✅ Komponen MyNavbar
   class MyNavbar extends HTMLElement {
     connectedCallback() {
       this.innerHTML = `
@@ -361,16 +435,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav ms-auto">
-  <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
-  <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
-  <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
-  <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
-  <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
-  <!-- ✅ Tambahan Approval -->
-  <li class="nav-item"><a href="/approval.html" class="nav-link text-dark"><i class="fa-solid fa-circle-check"></i> Approval</a></li>
-  <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
-  <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
-</ul>
+                 <li class="nav-item"><a href="/cpanel.html" class="nav-link text-dark"><i class="fa-solid fa-chart-line"></i> Laporan</a></li>
+                 <li class="nav-item"><a href="/pemasukan.html" class="nav-link text-dark"><i class="fa-solid fa-wallet"></i> Pemasukan</a></li>
+                 <li class="nav-item"><a href="/pengeluaran.html" class="nav-link text-dark"><i class="fa-solid fa-money-bill-wave"></i> Pengeluaran</a></li>
+                 <li class="nav-item"><a href="/assets.html" class="nav-link text-dark"><i class="fa-solid fa-box-archive"></i> Assets</a></li>
+                 <li class="nav-item"><a href="/form.html" class="nav-link text-dark"><i class="fa-solid fa-file-lines"></i> Formulir</a></li>
+                 <li class="nav-item"><a href="/approval.html" class="nav-link text-dark"><i class="fa-solid fa-circle-check"></i> Approval</a></li>
+                 <li class="nav-item"><a href="/pelanggan.html" class="nav-link text-dark"><i class="fa-solid fa-users"></i> Pelanggan</a></li>
+                 <li class="nav-item"><a href="#" id="logoutBtn" class="nav-link text-dark"><i class="fa-solid fa-right-from-bracket"></i> Logout</a></li>
+               </ul>
             </div>
           </div>
         </nav>
@@ -383,8 +456,10 @@
       }, 0);
     }
   }
+
   customElements.define('my-navbar', MyNavbar);
 
+  // ✅ Fungsi logout
   window.logout = async function () {
     const result = await Swal.fire({
       title: "Keluar dari akun?",
@@ -396,7 +471,8 @@
       await signOut(auth);
       Swal.fire("Logout berhasil", "", "success").then(() => location.href = "login.html");
     }
-  }
+  };
 </script>
+
 </body>
 </html>
