--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -7,39 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
-    <style>
-      body {
-        background-color: #f8f9fa;
-        overflow: auto;
-        /* atau scroll / auto */
-        scrollbar-width: none;
-        /* Firefox */
-        -ms-overflow-style: none;
-        /* IE & Edge lama */
-      }
-
-      .progress {
-        height: 20px;
-      }
-
-      .progress-bar {
-        font-size: 0;
-        transition: width 0.8s ease;
-      }
-
-      td {
-        vertical-align: middle;
-      }
-
-      table {
-        table-layout: auto;
-        width: 100%;
-      }
-
-      .swal2-popup {
-        overflow: hidden !important;
-      }
-    </style>
+    <link href="/assets/css/styles.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
   </head>
@@ -134,7 +103,9 @@
         </div>
         <div class="card-body">
           <!-- Card isi akan di-render di sini -->
-          <div id="timeline" class="d-flex gap-2 flex-nowrap overflow-hidden p-2"></div>
+          <div class="timeline-wrapper">
+  <div id="timeline"></div>
+</div>
         </div>
       </div>
     </div>
