--- a/pemasukan.html
+++ b/pemasukan.html
@@ -8,13 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet"/>
   <link href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" rel="stylesheet"/>
-  <style>
-    body { background-color: #f8f9fa; }
-    .main-content { max-width: 960px; margin: 0 auto; padding: 2rem 1rem; background: #fff; border-radius: .5rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); }
-    .table th, .table td { vertical-align: middle; }
-    .header-controls { display: flex; align-items: center; gap: 1rem; }
-    .dataTables_info, .dataTables_paginate { padding: 0.5rem 1rem; }
-  </style>
+  <link href="/assets/css/styles.css" rel="stylesheet" />
+
 </head>
 <body>
 
