--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <body>
   <my-navbar></my-navbar>
   <div class="container mb-5">
+
+    <!-- ✨ Aesthetic Jumbotron -->
     <div class="mb-3 text-end">
       <button class="btn btn-secondary" id="refreshBtn">
         <i class="fa-solid fa-rotate-right"></i>
@@ -64,18 +66,19 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
-          <h6>Mbps Tersebar</h6>
-          <h5 id="totalMbps">0 Mbps</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
         <div class="p-3 border rounded" style="background-color: #c71585; color: white;">
           <h6>Pengeluaran Tetap</h6>
           <h5 id="totalPengeluaranTetap">Rp 0</h5>
         </div>
       </div>
+      <div class="col-md-3">
+        <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
+          <h6>Mbps Tersebar</h6>
+          <h5 id="totalMbps">0 Mbps</h5>
+        </div>
+      </div>
     </div>
+
     <div class="card mb-4">
       <div class="card-header bg-success text-white">
         <i class="fa-solid fa-chart-bar"></i> Perbandingan
@@ -138,14 +141,15 @@
       </div>
       <div class="card-body p-0">
         <div class="table-responsive">
-          <table class="table table-striped mb-0 text-nowrap" id="gajiTable">
+          <table class="table table-striped table-sm mb-0 text-nowrap" id="gajiTable">
             <thead class="table-light align-middle text-center">
               <tr>
-                <th style="width: 5%;">No</th>
+                <th class="text-center" style="width: 5%;">No</th>
                 <th class="text-start" style="width: 15%;">Nama</th>
-                <th class="text-start" style="width: 25%;">Gaji</th>
-                <th class="text-start" style="width: 25%;">Dividen</th>
-                <th class="text-start" style="width: 30%;">Total Terima</th>
+                <th class="text-start" style="width: 20%;">Gaji</th>
+                <th class="text-start" style="width: 20%;">Dividen</th>
+                <th class="text-start" style="width: 20%;">Total Terima</th>
+                <th class="text-start" style="width: 20%;">Status</th>
               </tr>
             </thead>
             <tbody id="gajiBody"></tbody>
@@ -156,18 +160,20 @@
 
     <div class="card mb-4">
       <div class="card-header bg-success text-white">
-        <i class="fa-solid fa-chart-simple"></i> Penanaman Modal
+        <i class="fa-solid fa-chart-line"></i> Riwayat Keuangan
       </div>
       <div class="card-body">
         <div class="row">
           <div class="col-md-6 mb-4">
+            <h6 class="text-center text-success mb-3">Pemasukan 5 Bulan Terakhir</h6>
             <div style="height: 300px;">
-              <canvas id="barChart"></canvas>
+              <canvas id="incomeChart"></canvas>
             </div>
           </div>
           <div class="col-md-6 mb-4">
+            <h6 class="text-center text-danger mb-3">Pengeluaran 5 Bulan Terakhir</h6>
             <div style="height: 300px;">
-              <canvas id="pieChart"></canvas>
+              <canvas id="expenseChart"></canvas>
             </div>
           </div>
         </div>
@@ -207,6 +213,5 @@
   <script type="module" src="assets/js/kinerja.js"></script>
   <script type="module" src="/assets/js/chart.js"></script>
 </body>
-
 
 </html>
