--- a/index.html
+++ b/index.html
@@ -1,217 +1,18 @@
-<!DOCTYPE html>
-<html lang="id">
+<!doctype html>
+<title>Site Maintenance</title>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Laporan Keuangan - GENZET HOME</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.1/css/all.min.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet" />
-  <link href="/assets/css/styles.css" rel="stylesheet" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.29/jspdf.plugin.autotable.min.js"></script>
-  <!-- Favicon dasar -->
-  <link rel="icon" type="image/x-icon" href="https://genzethome.github.io/assets/img/favicon.ico">
-</head>
-
-<body>
-  <my-navbar></my-navbar>
-  <div class="container mb-5">
-
-    <!-- ✨ Aesthetic Jumbotron -->
-    <div class="mb-3 text-end">
-      <button class="btn btn-secondary" id="refreshBtn">
-        <i class="fa-solid fa-rotate-right"></i>
-      </button>
+<article>
+    <h1>We&rsquo;ll be back soon!</h1>
+    <div>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+        <p>&mdash; The Team</p>
     </div>
-    <div class="row g-3 mb-4 text-center">
-      <div class="col-md-3">
-        <div class="p-3 border rounded bg-success text-white">
-          <h6>Total Pemasukan</h6>
-          <h5 id="totalPemasukan">Rp 0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded" style="background-color: #b22222; color: white;">
-          <h6>Total Pengeluaran</h6>
-          <h5 id="totalPengeluaran">Rp 0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded bg-warning text-dark">
-          <h6>Total Assets</h6>
-          <h5 id="totalAssets">Rp 0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded" style="background-color: #4682b4; color: white;">
-          <h6>Saldo Akhir</h6>
-          <h5 id="saldoAkhir">Rp 0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded bg-info text-dark">
-          <h6>Total Pelanggan</h6>
-          <h5 id="totalPelanggan">0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded" style="background-color: #005bac; color: white;">
-          <h6>Penghasilan Tetap</h6>
-          <h5 id="penghasilanPelanggan">Rp 0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded" style="background-color: #c71585; color: white;">
-          <h6>Pengeluaran Tetap</h6>
-          <h5 id="totalPengeluaranTetap">Rp 0</h5>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="p-3 border rounded" style="background-color: #6f42c1; color: white;">
-          <h6>Mbps Tersebar</h6>
-          <h5 id="totalMbps">0 Mbps</h5>
-        </div>
-      </div>
-    </div>
-
-    <div class="card mb-4">
-      <div class="card-header bg-success text-white">
-        <i class="fa-solid fa-chart-bar"></i> Perbandingan
-      </div>
-      <div class="card-body">
-        <div class="mb-2">
-          <small>Pemasukan</small>
-        </div>
-        <div class="progress mb-3">
-          <div id="progressPemasukan" class="progress-bar bg-success" style="width: 0%;"></div>
-        </div>
-        <div class="mb-2">
-          <small>Pengeluaran</small>
-        </div>
-        <div class="progress mb-3">
-          <div id="progressPengeluaran" class="progress-bar bg-danger" style="width: 0%;"></div>
-        </div>
-        <div class="mb-2">
-          <small>Assets</small>
-        </div>
-        <div class="progress mb-3">
-          <div id="progressAssets" class="progress-bar bg-warning" style="width: 0%;"></div>
-        </div>
-        <div class="mb-2">
-          <small>Saldo</small>
-        </div>
-        <div class="progress">
-          <div id="progressSaldo" class="progress-bar" style="background-color: #4682b4; width: 0%;"></div>
-        </div>
-      </div>
-    </div>
-    <div class="card mb-4">
-      <div class="card-header bg-success text-white">
-        <i class="fa-solid fa-chart-simple"></i> Performa
-      </div>
-      <div class="card-body p-0">
-        <div class="table-responsive">
-          <table class="table table-striped mb-0 text-nowrap" id="kinerjaTable">
-            <thead class="table-light align-middle text-center">
-              <tr>
-                <th style="width: 5%;">No</th>
-                <th class="text-start" style="width: 8%;">Nama</th>
-                <th style="width: 10%;">Lencana</th>
-                <th style="width: 10%;">Absensi</th>
-                <th style="width: 15%;">Modal</th>
-                <th style="width: 50%;">Power (%)</th>
-              </tr>
-            </thead>
-            <tbody id="kinerjaBody"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
-
-    <!-- ✅ Card PEMBAGIAN HASIL (Restored) -->
-    <div class="card mb-4 d-none" id="distribusiCard">
-      <div class="card-header bg-success text-white">
-        <i class="fa-solid fa-money-bill-transfer"></i> Pembagian Hasil
-      </div>
-      <div class="card-body p-0">
-        <div class="table-responsive">
-          <table class="table table-striped table-sm mb-0 text-nowrap" id="gajiTable">
-            <thead class="table-light align-middle text-center">
-              <tr>
-                <th class="text-center" style="width: 5%;">No</th>
-                <th class="text-start" style="width: 15%;">Nama</th>
-                <th class="text-start" style="width: 20%;">Gaji</th>
-                <th class="text-start" style="width: 20%;">Dividen</th>
-                <th class="text-start" style="width: 20%;">Total Terima</th>
-                <th class="text-start" style="width: 20%;">Status</th>
-              </tr>
-            </thead>
-            <tbody id="gajiBody"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
-    <div class="card mb-4">
-      <div class="card-header bg-success text-white">
-        <i class="fa-solid fa-chart-line"></i> Riwayat Keuangan
-      </div>
-      <div class="card-body">
-        <div class="row">
-          <div class="col-md-6 mb-4">
-            <h6 class="text-center text-success mb-3">Pemasukan 5 Bulan Terakhir</h6>
-            <div style="height: 300px;">
-              <canvas id="incomeChart"></canvas>
-            </div>
-          </div>
-          <div class="col-md-6 mb-4">
-            <h6 class="text-center text-danger mb-3">Pengeluaran 5 Bulan Terakhir</h6>
-            <div style="height: 300px;">
-              <canvas id="expenseChart"></canvas>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- ✅ Card HEADER & container -->
-    <div class="card mb-4">
-      <div class="card-header bg-success text-white">
-        <i class="fas fa-tasks"></i> Jadwal Jatuh Tempo
-      </div>
-      <div class="card-body">
-        <!-- Card isi akan di-render di sini -->
-        <div class="timeline-wrapper">
-          <div id="timeline"></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Tambahkan Chart.js CDN jika belum ada -->
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- jQuery (HARUS sebelum DataTables) -->
-  <script>
-    var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
-    var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
-      return new bootstrap.Tooltip(tooltipTriggerEl)
-    })
-  </script>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script type="module" src="/assets/js/timeline.js"></script>
-  <script type="module" src="/assets/js/laporan.js"></script>
-  <script type="module" src="/assets/js/navbar.js"></script>
-  <script type="module" src="assets/js/kinerja.js"></script>
-  <script type="module" src="/assets/js/chart.js"></script>
-</body>
-
-</html>
+</article>
